Fix #3178: Align Organization Settings Page with Figma Style Guide (#3788)
* fixed the settings

* fixed the linting

* changed acc to bot

* removed comments

* removed unused css classes

* updatecss

* fix

* fixed acc to coderabbitai

* fixed acc to coderabbitai-1

* fixed acc to coderabbitai-2

* Update app-fixed.module.css

* Update app-fixed.module.css

* Update app-fixed.module.css

* update app-fixed

* update

* fix

* fix format

* Update OrgUpdate.spec.tsx

* Update app-fixed.module.css

* added the buttons in settings pg

* improved the test

* updated the code

* Update custom.css

* fix custom.css

* Update custom.css

* Update app.css

* fixed formatting-1

* fixed the buttons

* fixed the buttons

* fixed card align

* fixed card

* fixed the files

* fixed translations

* update app-fixed css

* update app-fixed css

* update app-fixed css codecov

* fixed the color of button

* fixed camel case

* fixed acc to coderabbitai

* fixed acc to coderabbitai

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -159,6 +159,9 @@
   --tablerow-bg-color: #eff1f7;
   --row-background: var(--bs-white, white);
   --font-size-header: 16px;
+  --visiable-btn-bg: #1778f2;
+  --form-check-input-bg: #efefef;
+  --form-check-input-border: #0000;
 }
 
 [data-bs-theme='dark'] {
@@ -2716,7 +2719,7 @@ textarea.form-control-lg {
 }
 
 .form-check-input {
-  --bs-form-check-bg: #f2f2f2;
+  --bs-form-check-bg: var(--form-check-input-bg);
   width: 1.3em;
   height: 1.3em;
   margin-top: 0.25em;
@@ -2744,14 +2747,12 @@ textarea.form-control-lg {
 }
 
 .form-check-input:focus {
-  border-color: #98ddb5;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(49, 187, 107, 0.25);
 }
 
 .form-check-input:checked {
-  background-color: #31bb6b;
-  border-color: #31bb6b;
+  background-color: var(--visiable-btn-bg);
+  border-color: var(--form-check-input-border);
 }
 
 .form-check-input:checked[type='checkbox'] {
@@ -2763,8 +2764,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input[type='checkbox']:indeterminate {
-  background-color: #31bb6b;
-  border-color: #31bb6b;
+  background-color: var(--form-check-input-bg);
+  border-color: var(--form-check-input-bg);
   --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 
@@ -2785,12 +2786,13 @@ textarea.form-control-lg {
 }
 
 .form-switch .form-check-input {
-  --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%280, 0, 0, 0.25%29'/%3e%3c/svg%3e");
-  width: 2em;
+  --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
+  width: 2.5em;
   margin-left: -2.5em;
   background-image: var(--bs-form-switch-bg);
   background-position: left center;
   border-radius: 2em;
+  border: none;
   transition: background-position 0.15s ease-in-out;
 }
 
@@ -2801,7 +2803,7 @@ textarea.form-control-lg {
 }
 
 .form-switch .form-check-input:focus {
-  --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2398ddb5'/%3e%3c/svg%3e");
+  --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
 }
 
 .form-switch .form-check-input:checked {
@@ -3266,8 +3268,7 @@ input:-webkit-autofill {
   background-color: var(--bs-form-valid-color);
 }
 
-.was-validated .form-check-input:valid:focus,
-.form-check-input.is-valid:focus {
+.was-validated .form-check-input.is-valid:focus {
   box-shadow: 0 0 0 0.25rem rgba(var(--bs-success-rgb), 0.25);
 }
 
@@ -3539,14 +3540,14 @@ fieldset:disabled .btn {
 
 .btn-success {
   --bs-btn-color: #000;
-  --bs-btn-bg: #31bb6b;
-  --bs-btn-border-color: #31bb6b;
+  --bs-btn-bg: #eaebef;
+  --bs-btn-border-color: #eaebef;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #50c581;
-  --bs-btn-hover-border-color: #46c27a;
+  --bs-btn-hover-bg: #eaebef;
+  --bs-btn-hover-border-color: #eaebef;
   --bs-btn-focus-shadow-rgb: 42, 159, 91;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #5ac989;
+  --bs-btn-active-bg: #eaebef;
   --bs-btn-active-border-color: #46c27a;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
